2003.06.15

  Added setRepeat() and getRepeat() to the SampleSource interface.
  This architecture change is required in order to support sample
  sources with non-standard looping functionality, such as loop points
  within MOD or AIFF files.

2003.06.13

  Fixed some unaligned reads in the MP3 decoder code, which caused
  Audiere on SGI/IRIX to crash.

2003.06.12

  Replaced MikMod with an actively-maintained MOD decoding engine:
    DUMB (http://dumb.sf.net) Overall, the change is for the better,
    but there are a few important changes to be noted:
      - fixed a crash in certain Impulse Tracker files
      - mod looping now works correctly
      - some previously-unsupported effects now work
      - opening a mod stream now takes significantly longer, since
        DUMB builds up an internal seek table, which is currently
        unused
      - playing mod files now takes roughly five times more CPU time
        than it used to
      - DUMB works on big-endian architectures (such as MIPS (sgi) and
        PowerPC (mac)), where MikMod did not
      - DUMB tries to match the exact behavior of the "official"
        trackers (that is, Impulse Tracker, Scream Tracker 3, and Fast
        Tracker), so some mods that sounded fine in ModPlug Tracker or
        Winamp (MikMod) may sound strange.  For example, some of the
        Amstrocity remixes of Squaresoft songs have distortion caused
        by volume range clipping when played in DUMB.

2003.06.02

  Fixed some edge cases involving small sounds, DirectSound streams,
  and the repeating flag.

  Added min_buffer_length device parameter to DirectSound device to
  prevent static in very small sounds.

2003.06.01

  Fixed short bursts of periodic static while decoding MP3s.  it
  appears to be a result of the Visual C++ optimizer interacting with
  the MP3 decoder code.  (I can't claim that is an optimization bug
  yet...  there could be some invalid aliasing going on in the code.)

2003.05.30
